grammar.js
        translation_unit: $ => optional(repeat1(
            $.external_declaration,
        )),

        /*
         * external_declaration :
         *   function_definition
         *   declaration
         *   SEMICOLON
         */
        declaration: $ => choice(
            seq($.function_prototype, ';'),
            seq($.init_declarator_list, ';'),
            seq(
                'precision',
                $.precision_qualifier,
                $.type_specifier,
                ';',
            ),
            seq(
                $.type_qualifier,
                $.identifier,
                '{',
                $.struct_declaration_list,
                '}',
                optional(seq(
                    $.identifier,
                    optional($.array_specifier),
                )),
                ';',
            ),
            seq(
                $.type_qualifier,
                optional(seq(
                    $.identifier,
                    optional($.identifier_list),
                )),
                ';',
            ),
        ),

        /*
         * identifier_list :
         *   COMMA IDENTIFIER
         *   identifier_list COMMA IDENTIFIER
         */
        init_declarator_list: $ => seq(
            field('type', $.fully_specified_type),
            optional(commaSeparated(field('variable', $.init_declarator))),
        ),

        fully_specified_type: $ => seq(
            optional($.type_qualifier),
            $.type_specifier,
        ),

        /*
         * invariant_qualifier :
         *  INVARIANT
         */
        type_specifier: $ => prec.left(seq(
            $.type_specifier_nonarray,
            optional($.array_specifier),
        )),

        /*
         * array_specifier :
         *   LEFT_BRACKET RIGHT_BRACKET
         *   LEFT_BRACKET conditional_expression RIGHT_BRACKET
         *   array_specifier LEFT_BRACKET RIGHT_BRACKET
         *   array_specifier LEFT_BRACKET conditional_expression RIGHT_BRACKET
         */
        basic_type: $ => choice(...BASIC_TYPES),

        /*
         * precision_qualifier :
         *   HIGH_PRECISION
         *   MEDIUM_PRECISION
         *   LOW_PRECISION
         */
